force-app/main/default/objects/Account/fields/Auto_Rabbit_POC__c.field-meta.xml
<CustomField>
    <fullName>Auto_Rabbit_POC__c</fullName>
    <label>Auto Rabbit POC</label>
    <length>50</length>
    <type>Text</type>
</CustomField>