force-app/main/default/objects/Account/fields/ChexSystems_Qualifile_Strategy__c.field-meta.xml
<CustomField>
    <fullName>ChexSystems_Qualifile_Strategy__c</fullName>
    <label>ChexSystems Qualifile Strategy</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CK001</fullName>
                <default>true</default>
                <label>CK001</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>