force-app/main/default/objects/Account/fields/cs_Account_Acceptance_Chexsystems__c.field-meta.xml
<CustomField>
    <fullName>cs_Account_Acceptance_Chexsystems__c</fullName>
    <description>This field will be automatically populated with the Account Acceptance (Accept, Decline, Review) of the most recent chexsystems report.</description>
    <inlineHelpText>This is automatically populated based on the most recent chexsystems report.</inlineHelpText>
    <label>Account Acceptance (Chexsystems)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>