force-app/main/default/objects/Account/fields/Legal_Entity_Type_cm__c.field-meta.xml
<CustomField>
    <fullName>Legal_Entity_Type_cm__c</fullName>
    <inlineHelpText>Custom Field is used in the online channel and updates the Account Type. This is due to in-ability to limit picklist values in portal</inlineHelpText>
    <label>Legal Entity Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Association</fullName>
            </value>
            <value>
                <fullName>Corporation</fullName>
            </value>
            <value>
                <fullName>Limited Liability Company</fullName>
            </value>
            <value>
                <fullName>Limited Partnership</fullName>
            </value>
            <value>
                <fullName>Municipality</fullName>
            </value>
            <value>
                <fullName>Partnership</fullName>
            </value>
            <value>
                <fullName>Sole Proprietorship - Business</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>