force-app/main/default/objects/Account/fields/LLC_BI__Relationship_Class__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Relationship_Class__c</fullName>
    <description>This is an optional field. It is manually populated. It indicates the rate class for a relationship and is used in tandem with the Rate_Class field on the Bill_Point object to determine pricing for a relationship for proforma calculations.</description>
    <label>Relationship Class</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>N/A</fullName>
            </value>
            <value>
                <fullName>Platinum</fullName>
            </value>
            <value>
                <fullName>Gold</fullName>
            </value>
            <value>
                <fullName>Silver</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>