force-app/main/default/objects/Account/recordTypes/Individual_Relationship_Master_TigerStrike.recordType-meta.xml
<RecordType>
    <fullName>Individual_Relationship_Master_TigerStrike</fullName>
    <active>true</active>
    <description>Individual Relationship RT for Master Tiger Strike Org (Do Not Deploy)</description>
    <label>Individual Relationship ( Master TigerStrike)</label>
</RecordType>