force-app/main/default/objects/Account/recordTypes/LLC_BI__Business.recordType-meta.xml
<RecordType>
    <fullName>LLC_BI__Business</fullName>
    <active>true</active>
    <description>Select &quot;Business&quot; to add a Corporation, Partnership, or other business relationship type.</description>
    <label>Business</label>
</RecordType>