force-app/main/default/objects/Account/listViews/Portal_Test_Relationship.listView-meta.xml
<ListView>
    <fullName>Portal_Test_Relationship</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.ADDRESS1_CITY</columns>
    <columns>ACCOUNT.ADDRESS1_STATE</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>ACCOUNT.URL</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.IS_CUSTOMERSUCCESS</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Portal Test Relationship</label>
</ListView>